--- a/BlazorLearnWebApp/Components/Layout/MainLayout.razor
+++ b/BlazorLearnWebApp/Components/Layout/MainLayout.razor
@@ -8,13 +8,13 @@
         <Header>
             <span class="ms-3 flex-fill">Bootstrap of Blazor</span>
             <Widget></Widget>
-            <img alt="avatar" src="./images/Argo-C.png" class="layout-avatar-right" />
+            @* <img alt="avatar" src="./images/Argo-C.png" class="layout-avatar-right" /> *@
             <span class="mx-3 d-none d-sm-block">超级管理员</span>
             <div class="layout-drawer" @onclick="@ToggleDrawer"><i class="fa-solid fa-gears"></i></div>
         </Header>
         <Side>
             <div class="layout-banner">
-                <img alt="logo" class="layout-logo" src="./images/logo.png" />
+                @* <img alt="logo" class="layout-logo" src="./images/logo.png" /> *@
                 <div class="layout-title">
                     <span>后台管理</span>
                 </div>
