feat:菜单功能完善

--- a/BlazorLearnWebApp/Components/Components/AdminTable.razor
+++ b/BlazorLearnWebApp/Components/Components/AdminTable.razor
@@ -8,5 +8,6 @@
        OnDeleteAsync="OnDeleteAsync"
        BeforeRowButtonTemplate="BeforeRowButtonTemplate"
        ShowExtendDeleteButtonCallback="ShowExtendDeleteButtonCallback"
+       RowButtonTemplate="RowButtonTemplate"
        ShowExtendEditButtonCallback="ShowExtendEditButtonCallback">
 </Table>
