--- a/BlazorLearnWebApp/Components/Pages/User.razor
+++ b/BlazorLearnWebApp/Components/Pages/User.razor
@@ -1,13 +1,51 @@
 ﻿@page "/user"
-
+@inject IDataService<UserEntity> DataService
+@inject SwalService SwalService
 @attribute [TabItemOption(Text = "用户管理", Icon = "fa-fw fa-solid fa-desktop")]
-<AdminTable TItem="UserEntity" >
+<AdminTable TItem="UserEntity" OnSaveAsync="OnSaveAsync">
     <TableColumns>
-        <TableColumn @bind-Field="@context.UserName"></TableColumn>
+        <TableColumn @bind-Field="@context.UserName" IsReadonlyWhenEdit="true"></TableColumn>
         <TableColumn @bind-Field="@context.NickName"></TableColumn>
         @* <TableColumn @bind-Field="@context.Role" Text="角色"></TableColumn> *@
     </TableColumns>
+    <RowButtonTemplate Context="value">
+        <TableCellPopConfirmButton Text="重置密码" Content=@($"您是否要重置{value.UserName}的密码") OnConfirm="() =>ResetPassword(value)"></TableCellPopConfirmButton>
+    </RowButtonTemplate>
 </AdminTable>
 
 @code {
+
+    private async Task<bool> OnSaveAsync(UserEntity arg1, ItemChangedType arg2)
+    {
+        if (arg2 == ItemChangedType.Add)
+        {
+            arg1.Password = arg1.UserName;
+        }
+
+        var ret = await DataService.SaveAsync(arg1, arg2);
+        if (ret && arg2 == ItemChangedType.Add)
+        {
+            await SwalService.Show(new SwalOption()
+            {
+                Category = SwalCategory.Success,
+                Title = "添加用户成功",
+                Content = $"您的密码是:{arg1.UserName}"
+            });
+        }
+
+        return ret;
+    }
+
+    private async Task ResetPassword(UserEntity user)
+    {
+        user.Password = user.UserName;
+        await user.SaveAsync();
+        await SwalService.Show(new SwalOption()
+        {
+            Category = SwalCategory.Success,
+            Title = "重置密码成功",
+            Content = $"您的密码是:{user.Password}"
+        });
+    }
+
 }
