--- a/BlazorLearnWebApp/Components/_Imports.razor
+++ b/BlazorLearnWebApp/Components/_Imports.razor
@@ -11,4 +11,5 @@
 @using BootstrapBlazor.Components
 @using BlazorLearnWebApp.Components.Components
 @using BlazorLearnWebApp.Entity
+@using Microsoft.AspNetCore.Components.Authorization
 
