feat:1.menu表单操作 2.多级菜单权限

--- a/BlazorLearnWebApp/Components/Components/AdminTable.razor
+++ b/BlazorLearnWebApp/Components/Components/AdminTable.razor
@@ -9,5 +9,8 @@
        BeforeRowButtonTemplate="BeforeRowButtonTemplate"
        ShowExtendDeleteButtonCallback="ShowExtendDeleteButtonCallback"
        RowButtonTemplate="RowButtonTemplate"
-       ShowExtendEditButtonCallback="ShowExtendEditButtonCallback">
+       ShowExtendEditButtonCallback="ShowExtendEditButtonCallback"
+       IsPagination="IsPagination"
+       IsMultipleSelect="IsMultipleSelect"
+       PageItemsSource="new[] { 10, 20, 50 }">
 </Table>
