--- a/BlazorLearnWebApp/Components/Pages/Login.razor
+++ b/BlazorLearnWebApp/Components/Pages/Login.razor
@@ -7,6 +7,8 @@
 @inject AuthenticationStateProvider Authentication
 @inject NavigationManager NavigationManager
 
+@attribute [AllowAnonymous]
+
 <div class="login-item login-item-gitee">
     <div class="login-header">
         <span>登录</span>
