--- a/BlazorLearnWebApp/Components/_Imports.razor
+++ b/BlazorLearnWebApp/Components/_Imports.razor
@@ -11,5 +11,9 @@
 @using BootstrapBlazor.Components
 @using BlazorLearnWebApp.Components.Components
 @using BlazorLearnWebApp.Entity
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+
+@attribute [Authorize]
+
 
