--- a/BlazorLearnWebApp/Components/Pages/User.razor
+++ b/BlazorLearnWebApp/Components/Pages/User.razor
@@ -3,14 +3,22 @@
 @inject SwalService SwalService
 @attribute [TabItemOption(Text = "用户管理", Icon = "fa-fw fa-solid fa-desktop")]
 @attribute [Authorize(Roles = "管理员")]
+@inject DownloadService DownloadService
+@using MiniExcelLibs
 
-
-<AdminTable TItem="UserEntity" OnSaveAsync="OnSaveAsync">
+<AdminTable TItem="UserEntity" OnSaveAsync="OnSaveAsync" @ref="_adminTable">
     <TableColumns>
         <TableColumn @bind-Field="@context.UserName" IsReadonlyWhenEdit="true"></TableColumn>
         <TableColumn @bind-Field="@context.NickName"></TableColumn>
         <TableColumn @bind-Field="@context.RoleId" Text="角色" Lookup="Roles"></TableColumn>
     </TableColumns>
+    <TableToolbarTemplate>
+        <TableToolbarButton Text="下载模板" OnClick="DownLoadTemplate"></TableToolbarButton>
+    </TableToolbarTemplate>
+    <TableExtensionToolbarTemplate>
+        <ButtonUpload TValue="string" ShowDownloadButton="false" BrowserButtonText="导入" BrowserButtonClass="btn-secondary" OnChange="OnChange" />
+    </TableExtensionToolbarTemplate>
+
     <RowButtonTemplate Context="value">
         <TableCellPopConfirmButton Text="重置密码" Content=@($"您是否要重置{value.UserName}的密码") OnConfirm="() => ResetPassword(value)"></TableCellPopConfirmButton>
     </RowButtonTemplate>
@@ -18,6 +26,7 @@
 
 @code {
     private List<SelectedItem>? Roles { get; set; }
+    private AdminTable<UserEntity> _adminTable;
 
     protected override async Task OnInitializedAsync()
     {
@@ -36,11 +45,11 @@
         if (ret && arg2 == ItemChangedType.Add)
         {
             await SwalService.Show(new SwalOption()
-            {
-                Category = SwalCategory.Success,
-                Title = "添加用户成功",
-                Content = $"您的密码是:{arg1.UserName}"
-            });
+                {
+                    Category = SwalCategory.Success,
+                    Title = "添加用户成功",
+                    Content = $"您的密码是:{arg1.UserName}"
+                });
         }
 
         return ret;
@@ -51,11 +60,40 @@
         user.Password = user.UserName;
         await user.SaveAsync();
         await SwalService.Show(new SwalOption()
+            {
+                Category = SwalCategory.Success,
+                Title = "重置密码成功",
+                Content = $"您的密码是:{user.Password}"
+            });
+    }
+
+    public void DownLoadTemplate()
+    {
+        DownloadService.DownloadFromFileAsync("用户模板.xlsx", "./Asset/user_template.xlsx");
+    }
+
+    public async Task OnChange(UploadFile uploadFile)
+    {
+        if (uploadFile.GetExtension() != ".xlsx")
         {
-            Category = SwalCategory.Success,
-            Title = "重置密码成功",
-            Content = $"您的密码是:{user.Password}"
-        });
+            await SwalService.Show(new SwalOption()
+                {
+                    Content = "只支持扩展名为xlsx的文件",
+                    Category = SwalCategory.Warning
+                });
+            return;
+        }
+        var stream = new MemoryStream();
+        await uploadFile.File!.OpenReadStream().CopyToAsync(stream);
+        var users = (await stream.QueryAsync<UserEntity>());
+        var role = await RoleEntity.Select.Where(x => x.RoleName == "管理员").FirstAsync();
+        foreach (var user in users)
+        {
+            user.RoleId = 2;
+            await user.SaveAsync();
+        }
+
+        await _adminTable.QueryAsync();
     }
 
 }
